[tool.poetry]
name = "repl-html-nuit-de-linfo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_nuit_de_linfo"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
